@@ -1,0 +1,12 @@
+import * as React from 'react';
+import { View, Text } from 'react-native';
+
+function SplashScreen() {
+    return (
+      <View style={{ flex: 1, alignItems: 'center', justifyContent: 'center' }}>
+        <Text>SplashScreen</Text>
+      </View>
+    );
+  }
+  
+export default SplashScreen;
